tests/reference/asr-implicit8-4e27d4d.stderr
semantic error: Variable 'n' is not declared
 --> tests/implicit8.f90:4:14
  |
4 | integer :: X(n), Y(m)
  |              ^ 'n' is undeclared
